# frozen_string_literal: true

module Validator
	def initialize(entity)
		@entity = entity
	end

	def validate
	end
end
