# frozen_string_literal: true

module FileStrategy

	def initialize(file_path)
		@file_path = file_path
	end

	def load_data
	end

	def save_data(data)
	end
end
