# frozen_string_literal: true

module DataManager
	def get_display_list(record_count, page)
	end

	def create(obj)
	end

	def read(id)
	end

	def update(id, obj)
	end

	def delete(id)
	end

	def count
	end

	def read_all
	end
end
